--- a/buildpack.toml
+++ b/buildpack.toml
@@ -3,22 +3,10 @@ api = "0.9"
 
 # Buildpack ID and metadata
 [buildpack]
-id = "samples/java-maven"
+id = "showpune/export-buildresult"
 version = "0.0.1"
-name = "Sample Java Maven Buildpack"
-homepage = "https://github.com/buildpacks/samples/tree/main/buildpacks/java-maven"
-
-
-# Stacks that the buildpack will work with
-[[stacks]]
-id = "io.buildpacks.samples.stacks.jammy"
+name = "copy build result Buildpack"
+homepage = "https://github.com/showpune/export-buildresult"
 
 [[stacks]]
-id = "io.buildpacks.samples.stacks.alpine"
-
-[[stacks]]
-id = "*"
-
-[[stacks]]
-id = "io.buildpacks.stacks.jammy"
-mixins = ["build:set=shell-utils"]
+  id = "*"
